# Local-AI

./: .gitignore  CMakeLists.txt  README.md  install.sh
Design/: architecture.md  design_log.md
src/: llm.cpp  llm.hpp  main.cpp  parser.cpp  parser.hpp  shell.cpp  shell.hpp
